--- a/source/core/source/queues/CMakeLists.txt
+++ b/source/core/source/queues/CMakeLists.txt
@@ -1,4 +1,11 @@
-target_sources(stream-triggering
-	PRIVATE
-		"${CMAKE_CURRENT_SOURCE_DIR}/ThreadQueue.cc"
-)
+if(USE_IMPLEMENTATION STREQUAL NONE)
+	target_sources(stream-triggering
+		PRIVATE
+			"${CMAKE_CURRENT_SOURCE_DIR}/ThreadQueue.cc"
+	)
+elseif(USE_IMPLEMENTATION STREQUAL CUDA)
+	target_sources(stream-triggering
+		PRIVATE
+			"${CMAKE_CURRENT_SOURCE_DIR}/CudaQueue.cu"
+	)
+endif()
