--- a/source/core/source/queues/CMakeLists.txt
+++ b/source/core/source/queues/CMakeLists.txt
@@ -3,11 +3,18 @@ if(USE_IMPLEMENTATION STREQUAL NONE)
 		PRIVATE
 			"${CMAKE_CURRENT_SOURCE_DIR}/ThreadQueue.cc"
 	)
-elseif(USE_IMPLEMENTATION STREQUAL CUDA)
+elseif(USE_IMPLEMENTATION STREQUAL GPU_MEM_OPS AND
+       GPU_TYPE STREQUAL NVIDIA)
 	target_sources(stream-triggering
 		PRIVATE
 			"${CMAKE_CURRENT_SOURCE_DIR}/CudaQueue.cu"
 	)
+elseif(USE_IMPLEMENTATION STREQUAL GPU_MEM_OPS AND
+	   GPU_TYPE STREQUAL AMD)
+	target_sources(stream-triggering
+		PRIVATE
+			"${CMAKE_CURRENT_SOURCE_DIR}/HIPQueue.cc"
+ )
 elseif(USE_IMPLEMENTATION STREQUAL HPE)
 	target_sources(stream-triggering
 		PRIVATE
