- Updated build instructions for CXI - Added Thread/Serial build script for Tioga - Major rework of matching behaviors - Major rework of CXI queue (still in progress)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,12 @@ cmake_minimum_required (VERSION 3.24 FATAL_ERROR)
 project(stream-triggering VERSION 0.1 LANGUAGES C CXX)
 
 set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(BUILD_SHARED_LIBS ON)
 set(USE_IMPLEMENTATION NONE CACHE STRING "Pick the underlying implementation to use for stream triggering")
 set_property(CACHE USE_IMPLEMENTATION PROPERTY STRINGS NONE GPU_MEM_OPS MPICH HPE CXI)
-set_property(CACHE GPU_TYPE PROPERTY STRINGS AMD NVIDIA)
+set(USE_GPU_TYPE NONE CACHE STRING "Pick the GPU provider on system")
+set_property(CACHE USE_GPU_TYPE PROPERTY STRINGS AMD NVIDIA)
 
 # Update the path that CMAKE will search for Find_XXX.cmake files
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
@@ -27,6 +29,7 @@ if(USE_IMPLEMENTATION STREQUAL NONE)
 elseif(USE_IMPLEMENTATION STREQUAL GPU_MEM_OPS)
     message(STATUS "Using GPU_MEM_OPS as the underlying implementation")
     set(NEED_GPU ON)
+    set(GPU_TYPE ${USE_GPU_TYPE})
     add_definitions( -DUSE_MEM_OPS )
 elseif(USE_IMPLEMENTATION STREQUAL MPICH)
     message(STATUS "Using MPICH's stream triggering as the underlying implementation.")
@@ -61,7 +64,6 @@ endfunction()
 # Link with AMD Stuff
 function(add_hip target_name)
     message(STATUS "Linking with HIP")
-    enable_language(HIP)
     find_package(hip REQUIRED)
     target_link_libraries(${target_name} hip::host)
     add_definitions( -DHIP_GPUS )
