--- a/source/core/source/queues/CMakeLists.txt
+++ b/source/core/source/queues/CMakeLists.txt
@@ -7,6 +7,7 @@ elseif(USE_IMPLEMENTATION STREQUAL GPU_MEM_OPS AND
        GPU_TYPE STREQUAL NVIDIA)
 	target_sources(stream-triggering
 		PRIVATE
+			"${CMAKE_CURRENT_SOURCE_DIR}/CudaQueue.cpp"
 			"${CMAKE_CURRENT_SOURCE_DIR}/CudaQueue.cu"
 	)
 elseif(USE_IMPLEMENTATION STREQUAL GPU_MEM_OPS AND
