Updated more backends to support barrier

--- a/source/core/source/queues/CMakeLists.txt
+++ b/source/core/source/queues/CMakeLists.txt
@@ -1,9 +1,4 @@
-if(USE_IMPLEMENTATION STREQUAL NONE)
-	target_sources(stream-triggering
-		PRIVATE
-			"${CMAKE_CURRENT_SOURCE_DIR}/ThreadQueue.cc"
-	)
-elseif(USE_IMPLEMENTATION STREQUAL GPU_MEM_OPS AND
+if(USE_IMPLEMENTATION STREQUAL GPU_MEM_OPS AND
        GPU_TYPE STREQUAL NVIDIA)
 	target_sources(stream-triggering
 		PRIVATE
