Update main branch with all recent GPU-backend changes (#1)
* Reworked CUDA version to use new API semantics; removed APIs that are not doing anything

* Working HIP version of cudaqueue

* Updated Tioga readme a bit

* Major rework of matching behaviors

* Fixed CMake bug with using CUDA language; Minor other cmake and file cleanup; Moved out C++23 code from cuda file to avoid compile errors

* Tweaks to CXI backend to manage deferred work queue

* Removed all "ready" related code since it's not in current API goals. Made CXI progress a little more precise

* Added support for enqueuing a barrier; organized the tests a bit

* Made CXI side error out if barrier is used (since not fully implemented yet)

--- a/source/core/source/queues/CMakeLists.txt
+++ b/source/core/source/queues/CMakeLists.txt
@@ -1,13 +1,16 @@
-if(USE_IMPLEMENTATION STREQUAL NONE)
+if(USE_IMPLEMENTATION STREQUAL GPU_MEM_OPS AND
+       GPU_TYPE STREQUAL NVIDIA)
 	target_sources(stream-triggering
 		PRIVATE
-			"${CMAKE_CURRENT_SOURCE_DIR}/ThreadQueue.cc"
-	)
-elseif(USE_IMPLEMENTATION STREQUAL CUDA)
-	target_sources(stream-triggering
-		PRIVATE
+			"${CMAKE_CURRENT_SOURCE_DIR}/CudaQueue.cpp"
 			"${CMAKE_CURRENT_SOURCE_DIR}/CudaQueue.cu"
 	)
+elseif(USE_IMPLEMENTATION STREQUAL GPU_MEM_OPS AND
+	   GPU_TYPE STREQUAL AMD)
+	target_sources(stream-triggering
+		PRIVATE
+			"${CMAKE_CURRENT_SOURCE_DIR}/HIPQueue.cc"
+ )
 elseif(USE_IMPLEMENTATION STREQUAL HPE)
 	target_sources(stream-triggering
 		PRIVATE
@@ -16,6 +19,6 @@ elseif(USE_IMPLEMENTATION STREQUAL HPE)
 elseif(USE_IMPLEMENTATION STREQUAL CXI)
 	target_sources(stream-triggering
 		PRIVATE
-			"${CMAKE_CURRENT_SOURCE_DIR}/CXIQueue.hip"
+			"${CMAKE_CURRENT_SOURCE_DIR}/CXIQueue.cpp"
 	)
 endif()
