More debugs + device control

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,10 @@ if(USE_CXI_BACKEND)
     target_include_directories(stream-triggering PUBLIC ${LIBFABRIC_INCLUDE_DIR})
     target_link_libraries(stream-triggering ${LIBFABRIC_LIBRARY})
     target_compile_options(stream-triggering PUBLIC -x hip)
+    if("${CMAKE_HIP_ARCHITECTURES}" STREQUAL "gfx90a")
+        message(STATUS "Adding custom code for the gfx90a")
+        add_definitions(-DUSE_GFX90A)
+    endif()
 endif()
 
 if(USE_HPE_BACKEND)
