--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,7 @@ build/
 /tests/*.core
 /tests/*.sh
 /tests/benchmark/flux-*
+/tests/benchmark/flux/*
+/tests/benchmark/outputs/*
 /tests/benchmark/*.sh
 /tests/benchmark/testing_dir
