Updated API to use MPI allocation kinds style variables

--- a/source/bindings/CMakeLists.txt
+++ b/source/bindings/CMakeLists.txt
@@ -2,12 +2,12 @@ target_sources(stream-triggering
 	PRIVATE
 		"${CMAKE_CURRENT_SOURCE_DIR}/constants.cc"
 		"${CMAKE_CURRENT_SOURCE_DIR}/MPI_Overrides.cc"
+		"${CMAKE_CURRENT_SOURCE_DIR}/MPIX_Alloc_mem.cc"
 		"${CMAKE_CURRENT_SOURCE_DIR}/MPIX_Barrier_init.cc"
 		"${CMAKE_CURRENT_SOURCE_DIR}/MPIX_Enqueue_start.cc"
 		"${CMAKE_CURRENT_SOURCE_DIR}/MPIX_Enqueue_startall.cc"
 		"${CMAKE_CURRENT_SOURCE_DIR}/MPIX_Enqueue_waitall.cc"
-		"${CMAKE_CURRENT_SOURCE_DIR}/MPIX_Free_gpu_mem.cc"
-		"${CMAKE_CURRENT_SOURCE_DIR}/MPIX_GPU_mem_alloc.cc"
+		"${CMAKE_CURRENT_SOURCE_DIR}/MPIX_Free_mem.cc"
 		"${CMAKE_CURRENT_SOURCE_DIR}/MPIX_Imatch.cc"
 		"${CMAKE_CURRENT_SOURCE_DIR}/MPIX_Is_matched.cc"
 		"${CMAKE_CURRENT_SOURCE_DIR}/MPIX_Match.cc"
