--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,4 @@ build/
 /tests/test
 /tests/flux-*
 /tests/*.core
-/tests/*.sh
-/tests/benchmark/flux-*
-/tests/benchmark/flux/*
-/tests/benchmark/outputs/*
-/tests/benchmark/*.sh
-/tests/benchmark/testing_dir
+/tests/scratch/
