Added nic logic for tuo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,7 +83,10 @@ if(USE_CXI_BACKEND)
     target_compile_options(stream-triggering PUBLIC -x hip)
     if("${CMAKE_HIP_ARCHITECTURES}" STREQUAL "gfx90a")
         message(STATUS "Adding custom code for the gfx90a")
-        add_definitions(-DUSE_GFX90A)
+        add_definitions(-DUSE_TIOGA)
+    elseif("${CMAKE_HIP_ARCHITECTURES}" STREQUAL "gfx942")
+        message(STATUS "Adding custom code for the gfx942")
+        add_definitions(-DUSE_TUOLUMNE)
     endif()
 endif()
 
