--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,4 +1,4 @@
-target_include_directories(stream-triggering
-	PUBLIC
-		"${CMAKE_CURRENT_SOURCE_DIR}"
+target_include_directories(stream-triggering PUBLIC
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+	$<INSTALL_INTERFACE:include>
 )
