Tweaked CXI queue to now support GPU triggered, CPU initiated collectives (allreduce for now

--- a/source/core/source/queues/CMakeLists.txt
+++ b/source/core/source/queues/CMakeLists.txt
@@ -6,7 +6,7 @@ if(USE_CUDA_BACKEND)
 	)
 endif()
 
-if(USE_HIP_BACKEND)
+if(USE_HIP_BACKEND OR USE_CXI_BACKEND)
 	target_sources(stream-triggering
 		PRIVATE
 			"${CMAKE_CURRENT_SOURCE_DIR}/HIPQueue.cc"
